fix spacing title issue

--- a/material-overrides/assets/stylesheets/index-page.css
+++ b/material-overrides/assets/stylesheets/index-page.css
@@ -41,7 +41,7 @@
 .subsection-wrapper .title {
   margin: 0;
   font-size: 1.15em;
-  padding: 1.5em 1.5em 0.5em 1.2em;
+  padding: 1.2em 1.2em 0em;
 }
 
 .md-typeset hr {
